--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/utilities.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link
       rel="stylesheet"
@@ -151,13 +152,18 @@
     </div>
     <div class="section3-container">
       <div class="inner-section3">
-        <form action="/action.php">
-          <label for="fname">First name:</label><br />
-          <input type="text" id="fname" value="Mike" /><br /><br />
-          <label for="lname">Last name:</label><br />
-          <input type="text" id="lname" value="Walker" /><br /><br />
-          <input type="submit" value="Submit" />
-        </form>
+        <h1>Contact me</h1>
+<form class="cf">
+  <div class="half left cf">
+    <input type="text" id="input-name" placeholder="Name">
+    <input type="email" id="input-email" placeholder="Email address">
+    <input type="text" id="input-subject" placeholder="Subject">
+  </div>
+  <div class="half right cf">
+    <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+  </div>  
+  <input type="submit" value="Submit" id="input-submit">
+</form>
       </div>
     </div>
     <footer class="footer">
