--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <section class="inner-section1 flex-container">
             <div class="img-container">
               <img
-                src="../images/home/פוסטר - הסיפור שלי.jpg"
+                src="images/home/פוסטר - הסיפור שלי.jpg"
                 alt="'my story' project"
               />
             </div>
@@ -142,7 +142,7 @@
             </div>
             <div class="img-container">
               <img
-                src="../images/home/teddybearMachine.jpg"
+                src="images/home/teddybearMachine.jpg"
                 alt="'my story' project"
               />
             </div>
