--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     </div>
     <p>CopyRight &copy served by Yarden Tamir</p>
   </footer>
+  <!-- scripts -->
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
