--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
             <div class="img-container">
               <img
-                src="images/home/teddybearMachine.jpg"
+                src="images/home/teddybearMachine.JPG"
                 alt="'my story' project"
               />
             </div>
