--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yarden Tamir | FullStack Developer</title>
-    <!-- scripts -->
-    <script
-      src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-      data-auto-a11y="true"
-    ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="shortcut icon" type="image/png" href="images/home/YardenLogo.png"/>
     <!-- links -->
     <link rel="stylesheet" href="styles/utilities.css" />
     <link rel="stylesheet" href="styles/header.css" />
@@ -33,7 +28,7 @@
           <span class="text-primary">Portfolio</span>
         </h1>
         <nav>
-          <ul id="nav-list">
+          <ul>
             <li><a href="#home" class="current">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#proects">Projects</a></li>
@@ -43,13 +38,13 @@
       </div>
 
       <!--Nav mobile-->
-      <nav role="navigation" id="nav-mobile" class="hidden-style">
-        <div id="menuToggle">
+      <nav role="navigation" class="hidden-style nav-mobile">
+        <div class="menu-mobile-toggle">
           <input type="checkbox" />
           <span></span>
           <span></span>
           <span></span>
-          <ul id="menu">
+          <ul class="mobile-menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#proects">Projects</a></li>
@@ -60,7 +55,7 @@
 
       <!-- header content -->
       <div class="content">
-        <div class="flex-container">
+        <div class="flex-container align-flex-items">
           <div class="imgWrapper">
             <img src="images\home\YardenTamir.jpg" alt="Yarden's Picture" />
           </div>
@@ -81,9 +76,10 @@
     </header>
     <div class="section2-container">
       <h2>My projects</h2>
-      <div class="parent">
-        <div class="div1">
-          <section class="inner-section1 flex-container">
+      <div class="projects-parent-div">
+        <!-- project1 -->
+        <div class="projects-sec1">
+          <section class="inner-section1 flex-container project-card">
             <div class="img-container">
               <img
                 src="images/home/פוסטר - הסיפור שלי.jpg"
@@ -115,8 +111,9 @@
             </div>
           </section>
         </div>
-        <div class="div2">
-          <section class="inner-section2 flex-container">
+          <!-- project2 -->
+        <div class="projects-sec2">
+          <section class="inner-section2 flex-container project-card">
             <div>
               <h3>Teddy Bear Machine - Game generator</h3>
               <p>
@@ -125,7 +122,7 @@
                 perspiciatis sit assumenda! Reprehenderit. Lorem ipsum dolor sit
                 amet consectetur adipisicing elit. Illo, maxime reiciendis
                 tempora porro eos quidem dolores repellendus saepe nihil
-                deserunt?
+                deserunt? 
               </p>
               <div>
                 <input
@@ -152,7 +149,7 @@
     </div>
     <div class="section3-container">
       <div class="inner-section3">
-        <h1>Contact me</h1>
+        <h1 class="green-txt">Contact me</h1>
 <form class="cf">
   <div class="half left cf">
     <input type="text" id="input-name" placeholder="Name">
@@ -199,52 +196,17 @@
           </div>
         </a>
     </div>
-    <p>CopyRight &copy served by Yarden Tamir</p>
+    <p>CopyRight &copy Yarden Tamir</p>
   </footer>
-  <!-- scripts -->
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-    <script>
-      const navbar = document.getElementById("navbar");
-      // const navList = document.getElementById("nav-list");
-      let scrolled = false;
-
-      window.onscroll = function () {
-        if (window.pageYOffset > 80) {
-          navbar.classList.remove("top");
-          navbar.classList.add("white-txt");
-          // navList.classList.add("white-txt");
-          if (!scrolled) {
-            navbar.style.transform = "translateY(-70px)";
-          }
-          setTimeout(function () {
-            navbar.style.transform = "translateY(0)";
-            scrolled = true;
-          }, 200);
-        } else {
-          navbar.classList.add("top");
-          navbar.classList.remove("white-txt");
-          // navList.classList.remove("white-txt");
-          scrolled = false;
-        }
-      };
-
-          // Smooth Scrolling
-    $('#con-btn').on('click', function(event) {
-        if (this.hash !== '') {
-          event.preventDefault();
-          // const hash = this.hash;
-          const contDiv = $(".section3-container");
-          $('html, body').animate(
-            {
-              scrollTop: $(contDiv).offset().top
-            },
-            800
-          );
-        }
-      });
-    </script>
+          <!-- scripts -->
+          <script
+          src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+          data-auto-a11y="true"
+        ></script>
+        <script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+        <script src="js/main.js"></script>
   </body>
 </html>
