--- a/index.html
+++ b/index.html
@@ -152,12 +152,22 @@
         <h1 class="green-txt">Contact me</h1>
 <form class="cf">
   <div class="half left cf">
-    <input type="text" id="input-name" placeholder="Name">
-    <input type="email" id="input-email" placeholder="Email address">
-    <input type="text" id="input-subject" placeholder="Subject">
+    <div>
+    <label for="Name">Name:</label>
+    <input name="name" type="text" id="input-name">
+  </div>
+  <div>
+    <label for="email">Email address:</label>
+    <input name="email" type="email" id="input-email">
+  </div>
+  <div>
+    <label for="subject">Subject:</label>
+    <input name="subject" type="text" id="input-subject" >
+  </div>
   </div>
   <div class="half right cf">
-    <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
+    <label for="message">Message:</label>
+    <textarea name="message" type="text" id="input-message"></textarea>
   </div>  
   <input type="submit" value="Submit" id="input-submit">
 </form>
