last update (i hope)

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <form class="cf">
   <div class="half left cf">
     <div>
-    <label for="Name">Name:</label>
+    <label for="name">Name:</label>
     <input name="name" type="text" id="input-name">
   </div>
   <div>
@@ -206,7 +206,7 @@
           </div>
         </a>
     </div>
-    <p>CopyRight &copy Yarden Tamir</p>
+    <p>CopyRight &copy Yarden Tamir 2021</p>
   </footer>
           <!-- scripts -->
           <script
