--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div class="section3-container">
       <div class="inner-section3">
         <h1 class="green-txt">Contact me</h1>
-<form class="cf">
+<form class="cf" name="contact" method="POST" data-netlify="true">
   <div class="half left cf">
     <div>
     <label for="name">Name:</label>
