text inside projects

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <li><a href="#home" class="current">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#proects">Projects</a></li>
-            <li><a id="con-btn" href="#contact" class="btn">Contact me</a></li>
+            <li><a id="con-btn" href="#contact">Contact</a></li>
+            <li><a href="./files/קורות חיים ירדן טמיר4.pdf" download="Yarden-Tamir_CV" class="btn">Download CV</a></li>
           </ul>
         </nav>
       </div>
@@ -48,7 +49,8 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#proects">Projects</a></li>
-            <li><a href="#contact">Contact me</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="./files/קורות חיים ירדן טמיר4.pdf" download="Yarden-Tamir_CV">Download CV</a></li>
           </ul>
         </div>
       </nav>
@@ -61,7 +63,7 @@
           </div>
           <h1 class="flex-item">
             Hi! I'm Yarden,<br />
-            A Full Stack developer
+            Full Stack developer
           </h1>
         </div>
         <div>
@@ -74,6 +76,17 @@
         </div>
       </div>
     </header>
+    <div class="lang-container">
+      <div class="all-icons flex-container">
+        <i class="fab fa-react fa-2x"></i>
+        <i class="fab fa-js-square fa-2x"></i>
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3-alt fa-2x"></i>
+        <i class="fab fa-node fa-2x"></i>
+        <i class="fas fa-database fa-2x"></i>
+
+      </div>
+    </div>
     <div class="section2-container">
       <h2>My projects</h2>
       <div class="projects-parent-div">
@@ -82,31 +95,31 @@
           <section class="inner-section1 flex-container project-card">
             <div class="img-container">
               <img
-                src="images/home/פוסטר - הסיפור שלי.jpg"
+                src="images/home/תמונה מייצגת.jpg"
                 alt="'my story' project"
               />
             </div>
             <div>
               <h3>My Story - Sharing Site</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam asperiores laudantium repellat odio animi corporis, ex
-                perspiciatis sit assumenda! Reprehenderit. Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Earum, aliquam. Lorem ipsum dolor sit 
-                amet consectetur, adipisicing elit. Iure architecto repellat impedit dolore,
-                 sapiente ipsum quo. Porro incidunt doloribus eaque?
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, dolor!</p>
+                An interactive cooperative environment in the image of an Instagram Story. 
+                The environment has 3 chapters: familiarization, hospitalization and release.
+                In each chapter there will be questions related to the current topic, that the user should answer with text and/or image to share emotional information in order to share it with their educational team and finally, to creates himself his own digital story throughout the process the stay in the hospital. 
+                The educational team have a management area, where they can be exposed to patients the answers and fit the environment to each one of them, by exposing and hiding chapters and questions.
+                <strong>created using: C#, JavaScript, HTML, CSS, JSON, SQL and Access Database</strong>
+                </p>
               <div>
                 <input
                   type="button"
                   value="Read More"
                   class="btn secondary-btn"
                 />
-                <input
-                  type="button"
-                  value="Visit Site"
-                  class="btn primary-btn"
-                />
+                <a  type="button"
+                href="http://projects.telem-hit.net/2020/myStory_yardenAmit/"
+                target="_blank"
+                class="btn primary-btn">
+                Visit Site
+                </a>
               </div>
             </div>
           </section>
@@ -117,12 +130,11 @@
             <div>
               <h3>Teddy Bear Machine - Game generator</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam asperiores laudantium repellat odio animi corporis, ex
-                perspiciatis sit assumenda! Reprehenderit. Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Illo, maxime reiciendis
-                tempora porro eos quidem dolores repellendus saepe nihil
-                deserunt? 
+                Teddy Bear Machine is a game generator that allows you to create questions and answers as you wish and fit it to the game.
+                the question and answers can contain text length under 50 and pictures. 
+                Every game represented with unique identifier numbers. Your students should put the game identifier numbers in the game input and your students can play and answer the questions you created.
+                The game has nice music and cool animations. So go ahead and create your own game!
+                <strong>created using: C#, JavaScript, HTML, CSS, XML and Animate CC</strong>
               </p>
               <div>
                 <input
@@ -139,7 +151,7 @@
             </div>
             <div class="img-container">
               <img
-                src="images/home/teddybearMachine.JPG"
+                src="images/home/teddybearMachine.jpg"
                 alt="'my story' project"
               />
             </div>
